@@ -1,0 +1,3 @@
+<p><br />
+<p>http://example.com/files/test_image.gif</p>
+<p>/wiki/en/ParserFunctions2</p>
