@@ -1,0 +1,5 @@
+<!-- test usage and rendering of parser functions -->
+
+{{filepath: Test Image.gif}}
+
+{{localurl: {{PAGENAME}}}}
